Volatility and Returns pulished

--- a/Super_main.ipynb
+++ b/Super_main.ipynb
@@ -1533,6 +1533,98 @@
     "plot_metrics(df_simple_mean_roll, \"Rolling Simple Mean Return\")\n",
     "plot_metrics(df_simple_volatility_roll, \"Rolling Simple Volatility (Standard Deviation)\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d77995f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 💸 Sharpe-ratio full period\n",
+    "risk_free_rate = 0.045  # 4.5% annual risk-free rate\n",
+    "\n",
+    "sharpe_df = dict()\n",
+    "for symbol in DF_simple_mean.index.tolist():\n",
+    "    sharpe_ratio = (DF_simple_mean[symbol] - risk_free_rate) / DF_simple_volatility[\n",
+    "        symbol\n",
+    "    ]\n",
+    "    sharpe_df[symbol] = [float(sharpe_ratio)]\n",
+    "\n",
+    "# Display the result DataFrame\n",
+    "\n",
+    "\n",
+    "def plot_sharpe_ratio_results(\n",
+    "    sharpe_df: pd.DataFrame, start_date: str, end_date: str, risk_free_rate: float\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Takes a pre-calculated DataFrame of Sharpe Ratios, displays it, and\n",
+    "    generates a colored bar plot for visual analysis.\n",
+    "\n",
+    "    Args:\n",
+    "        sharpe_df (pd.DataFrame): DataFrame with Ticker as index and\n",
+    "                                  a column named 'Sharpe Ratio'.\n",
+    "        start_date (str): Start date of the historical data (YYYY-MM-DD).\n",
+    "        end_date (str): End date of the historical data (YYYY-MM-DD).\n",
+    "        risk_free_rate (float): Annual risk-free rate used in the calculation.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Ensure the DataFrame has the correct column and is sorted for display\n",
+    "    if \"Sharpe Ratio\" not in sharpe_df.columns:\n",
+    "        raise ValueError(\"DataFrame must contain a column named 'Sharpe Ratio'.\")\n",
+    "\n",
+    "    sharpe_df = sharpe_df.sort_values(by=\"Sharpe Ratio\", ascending=False)\n",
+    "\n",
+    "    print(\"\\n\" + \"=\" * 50)\n",
+    "    print(\"      🏆 SHARPE RATIO RESULTS 🏆\")\n",
+    "    print(\"=\" * 50)\n",
+    "\n",
+    "    # Display the result DataFrame\n",
+    "    print(sharpe_df.to_markdown(floatfmt=\".4f\"))\n",
+    "\n",
+    "    # --- Plotting the Results ---\n",
+    "\n",
+    "    # Create figure and axis\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "    # Plot the bar chart\n",
+    "    # Use green for positive ratios and red for negative ratios\n",
+    "    colors = np.where(sharpe_df[\"Sharpe Ratio\"] >= 0, \"green\", \"red\")\n",
+    "    sharpe_df[\"Sharpe Ratio\"].plot(kind=\"bar\", ax=ax, color=colors)\n",
+    "\n",
+    "    # Add a line at y=0 for reference\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8, linestyle=\"--\")\n",
+    "\n",
+    "    # Set titles and labels\n",
+    "    ax.set_title(\n",
+    "        f\"Sharpe Ratios ({start_date} - {end_date})\\nRisk-Free Rate: {risk_free_rate * 100:.2f}%\",\n",
+    "        fontsize=14,\n",
+    "    )\n",
+    "    ax.set_xlabel(\"Stock Ticker\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Sharpe Ratio\", fontsize=12)\n",
+    "\n",
+    "    # Rotate x-axis labels for readability\n",
+    "    plt.xticks(rotation=0)\n",
+    "\n",
+    "    # Display the plot\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Creating the mock DataFrame\n",
+    "my_sharpe_ratio_df = pd.DataFrame.from_dict(\n",
+    "    sharpe_df, orient=\"index\", columns=[\"Sharpe Ratio\"]\n",
+    ")\n",
+    "\n",
+    "# --- Calling the new function ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    plot_sharpe_ratio_results(\n",
+    "        my_sharpe_ratio_df,\n",
+    "        start_date=S_date,\n",
+    "        end_date=E_date,\n",
+    "        risk_free_rate=risk_free_rate,\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
